# paperless-cli

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
src/: main.rs
